# lineartg

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json
migrations/: env.py
migrations/versions/: 3f08854ccd2a_subscriptions.py  444ddc150899_init.py  4aa23b7596de_add_registered_flag.py  8ed62ac8cd01_project_members.py  b1f2a3c4d5e6_chatbinding_thread_id.py  c2d3e4f5a6b7_chatbinding_announce.py  d3e4f5a6b7c8_role_guest.py  e4f5a6b7c8d9_oauth_refresh.py  e649e1d14137_projects_and_project_leads.py
scripts/: check_actor.py  check_board.py  check_browse.py  check_card.py  check_emoji.py  check_keys.py  check_linear.py  check_sub.py  check_team.py  check_write.py  seed_token.py
src/bot/: config.py  dates.py  main.py  run_polling.py  run_test.py  states.py
src/bot/ai/: __init__.py  provider.py
src/bot/db/: __init__.py  models.py  session.py
src/bot/handlers/: __init__.py  admin.py  assign.py  assistant.py  board.py  browse.py  card.py  draft.py  menu.py  my.py  people.py  start.py  tasklist.py  tasks.py  team.py
src/bot/keyboards/: inline.py  menu.py
src/bot/linear/: __init__.py  client.py  oauth.py  queries.py
src/bot/middlewares/: __init__.py  db.py  gate.py  i18n.py
src/bot/services/: permissions.py  projects.py  status.py  subscriptions.py  users.py  workspace.py
src/bot/webhooks/: __init__.py  feedback.py  linear_webhook.py  oauth_callback.py  tasks_api.py
src/locales/en/: messages.ftl
src/locales/ru/: messages.ftl
src/locales/uz/: messages.ftl
