[project]
name = "lineartg"
version = "0.1.0"
description = "Telegram bot bridge for Linear.app — let a team work in Linear via Telegram without paid seats"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13,<4.0",
    "aiogram-i18n>=1.4",
    "fluent-runtime>=0.4",
    "httpx>=0.27",
    "gql[httpx]>=3.5",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "aiohttp>=3.10",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
